<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:gravity="center"
    android:background="?android:attr/windowBackground">



    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/crea_tu_cuenta"
    android:textSize="26sp"
    android:textStyle="bold"
    android:textColor="?attr/colorPrimary"
    android:layout_marginBottom="32dp"/>

    <EditText
        android:id="@+id/etNombreRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_completo"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:textColor="?android:attr/textColorPrimary"
        android:textColorHint="?android:attr/textColorSecondary"
        android:background="?android:attr/editTextBackground"/>

    <EditText
        android:id="@+id/etEmailRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:textColor="?android:attr/textColorPrimary"
        android:textColorHint="?android:attr/textColorSecondary"
        android:background="?android:attr/editTextBackground"/>

    <EditText
        android:id="@+id/etPassRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_marginBottom="24dp"
        android:textColor="?android:attr/textColorPrimary"
        android:textColorHint="?android:attr/textColorSecondary"
        android:background="?android:attr/editTextBackground"/>

    <Button
        android:id="@+id/btnFinalizarRegistro"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/registrarme"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvVolverLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tienes_inicia_sesion"
        android:layout_marginTop="20dp"
        android:textColor="?android:attr/textColorSecondary"/>
</LinearLayout>