<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="?attr/colorSurface"
    android:elevation="8dp">
    <ImageView
        android:id="@+id/ivLogoPago"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginBottom="15dp"
        android:src="@drawable/logo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datos_de_pago_seguro"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:textColor="@color/primary"/>
    <EditText
        android:id="@+id/etNumeroTarjeta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/n_mero_de_tarjeta_16_d_gitos"
        android:inputType="number"
        android:maxLength="16"
        android:textColorHint="?android:attr/textColorSecondary"
        android:textColor="?android:attr/textColorPrimary"
        android:layout_marginBottom="12dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <EditText
            android:id="@+id/etFechaExpiracion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/mm_aa"
            android:textColorHint="?android:attr/textColorSecondary"
            android:textColor="?android:attr/textColorPrimary"
            android:inputType="date"/>

        <EditText
            android:id="@+id/etCVV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/cvv"
            android:textColorHint="?android:attr/textColorSecondary"
            android:textColor="?android:attr/textColorPrimary"
            android:inputType="numberPassword"
            android:maxLength="3"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnConfirmarPagoReal"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/confirmar_y_pagar"
        android:backgroundTint="@color/primary"
        android:textColor="@color/white"
        android:textStyle="bold"/>
</LinearLayout>