<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="30dp"
    android:background="?android:attr/windowBackground">
    <ImageView
    android:layout_width="180dp"
    android:layout_height="180dp"
    android:src="@drawable/logo" android:layout_marginBottom="32dp" />

    <EditText
        android:id="@+id/etUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo"
        android:background="?attr/colorSurface"
        android:textColor="?android:attr/textColorPrimary"
        android:textColorHint="?android:attr/textColorSecondary"
        android:padding="12dp"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/etPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:background="?attr/colorSurface"
        android:textColor="?android:attr/textColorPrimary"
        android:textColorHint="?android:attr/textColorSecondary"
        android:padding="12dp"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:backgroundTint="@color/primary"
        android:textColor="@color/white" /> <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sin_cuenta"
        android:layout_marginTop="16dp"
        android:textColor="@color/primary"
        android:textStyle="bold" />
</LinearLayout>