<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="?android:attr/windowBackground">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/ivLogoDetail"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="start"
            android:layout_marginBottom="10dp"
            android:src="@drawable/logo" />

        <ImageView
            android:id="@+id/ivProductLarge"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:src="@drawable/peluche_gigante"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvDetailTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_oso_grande_globos"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="?android:attr/textColorPrimary" android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/tvDetailPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/precio_oso_gigante_globos"
            android:textSize="20sp"
            android:textColor="@color/primary" android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripcion_oso_gigante_globos"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:textColor="?android:attr/textColorSecondary" android:lineSpacingExtra="4dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/dividerVertical" android:layout_marginVertical="20dp"/>

        <Button
            android:id="@+id/btnAddToCart"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/añadir_carrito"
            android:backgroundTint="@color/primary"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>